// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Blockquote Default renders correctly 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;

exports[`Blockquote Default renders correctly with extra attributes 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;

exports[`Blockquote Default renders correctly with extra class names 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary custom-class custom-class--test"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;

exports[`Page summary Default renders correctly 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;

exports[`Page summary Default renders correctly with extra attributes 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;

exports[`Page summary Default renders correctly with extra class names 1`] = `
<jest>
  <section
    aria-labelledby="page-summary-title"
    class="ecl-page-summary custom-class custom-class--test"
    id="page-summary"
  >
    <div
      class="ecl-page-summary__header"
    >
      <span
        aria-hidden="true"
        class="wt-icon-phosphor--book-open ecl-icon ecl-icon--m ecl-page-summary__icon ecl-icon-phosphor--book-open"
      />
      <h2
        class="ecl-page-summary__title"
        id="page-summary-title"
      >
        Summary
      </h2>
    </div>
    <div
      class="ecl-page-summary__description"
    >
      Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </section>
</jest>
`;
